Prevent the image file name from overlapping the close button
See https://www.woltlab.com/community/thread/300453-bildtitel-kann-von-schlie%C3%9Fen-button-%C3%BCberdeckt-werden/

--- a/wcfsetup/install/files/style/ui/imageViewer.scss
+++ b/wcfsetup/install/files/style/ui/imageViewer.scss
@@ -178,6 +178,10 @@
 
 		h1 {
 			font-size: 1.75rem;
+			max-width: calc(100% - 70px);
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
 		}
 
 		h2 {
